wingfoil-next/tests/trybuild/reserved_prefix_name.stderr
error: `__wf_anon1` uses the reserved `__wf_anon` prefix — it is used for macro-generated intermediate node names; pick another name
 --> tests/trybuild/reserved_prefix_name.rs:7:13
  |
7 |         let __wf_anon1 = g.ticker(Duration::from_nanos(10)).count();
  |             ^^^^^^^^^^
